frontend for all crud pages

--- a/ActionCommandGame.Ui.Mvc/Views/Item/CreateEditPartial.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Item/CreateEditPartial.cshtml
@@ -3,37 +3,37 @@
 <div asp-validation-summary="ModelOnly"></div>
 
 <div class="mb-3">
-    <label asp-for="Name" class="form-label"></label>
+    <label asp-for="Name" class="form-label">Name</label>
     <input asp-for="Name" class="form-control">
-    <span asp-validation-for="Name"></span>
+    <span asp-validation-for="Name" class="text-danger"></span>
 </div>
 <div class="mb-3">
-    <label asp-for="Description" class="form-label"></label>
+    <label asp-for="Description" class="form-label">Description</label>
     <input asp-for="Description" class="form-control">
-    <span asp-validation-for="Description"></span>
+    <span asp-validation-for="Description" class="text-danger"></span>
 </div>
 <div class="mb-3">
-    <label asp-for="Attack" class="form-label"></label>
+    <label asp-for="Attack" class="form-label">Attack</label>
     <input asp-for="Attack" class="form-control">
-    <span asp-validation-for="Attack"></span>
+    <span asp-validation-for="Attack" class="text-danger"></span>
 </div>
 <div class="mb-3">
-    <label asp-for="Defense" class="form-label"></label>
+    <label asp-for="Defense" class="form-label">Defense</label>
     <input asp-for="Defense" class="form-control">
-    <span asp-validation-for="Defense"></span>
+    <span asp-validation-for="Defense" class="text-danger"></span>
 </div>
 <div class="mb-3">
-    <label asp-for="Fuel" class="form-label"></label>
+    <label asp-for="Fuel" class="form-label">Fuel</label>
     <input asp-for="Fuel" class="form-control">
-    <span asp-validation-for="Fuel"></span>
+    <span asp-validation-for="Fuel" class="text-danger"></span>
 </div>
 <div class="mb-3">
-    <label asp-for="ActionCooldownSeconds" class="form-label"></label>
+    <label asp-for="ActionCooldownSeconds" class="form-label">Action Cooldown (Seconds)</label>
     <input asp-for="ActionCooldownSeconds" class="form-control">
-    <span asp-validation-for="ActionCooldownSeconds"></span>
+    <span asp-validation-for="ActionCooldownSeconds" class="text-danger"></span>
 </div>
 <div class="mb-3">
-    <label asp-for="Price" class="form-label"></label>
+    <label asp-for="Price" class="form-label">Price</label>
     <input asp-for="Price" class="form-control">
-    <span asp-validation-for="Price"></span>
+    <span asp-validation-for="Price" class="text-danger"></span>
 </div>
