--- a/ActionCommandGame.Ui.Mvc/Views/NegativeGameEvents/CreateEditPartial.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/NegativeGameEvents/CreateEditPartial.cshtml
@@ -5,30 +5,30 @@
 <div class="mb-3">
     <label asp-for="Name" class="form-label"></label>
     <input asp-for="Name" class="form-control">
-    <span asp-validation-for="Name"></span>
+    <span asp-validation-for="Name" class="text-danger"></span>
 </div>
 <div class="mb-3">
     <label asp-for="Description" class="form-label"></label>
     <input asp-for="Description" class="form-control">
-    <span asp-validation-for="Description"></span>
+    <span asp-validation-for="Description" class="text-danger"></span>
 </div>
 <div class="mb-3">
     <label asp-for="DefenseWithGearDescription" class="form-label"></label>
     <input asp-for="DefenseWithGearDescription" class="form-control">
-    <span asp-validation-for="DefenseWithGearDescription"></span>
+    <span asp-validation-for="DefenseWithGearDescription" class="text-danger"></span>
 </div>
 <div class="mb-3">
     <label asp-for="DefenseWithoutGearDescription" class="form-label"></label>
     <input asp-for="DefenseWithoutGearDescription" class="form-control">
-    <span asp-validation-for="DefenseWithoutGearDescription"></span>
+    <span asp-validation-for="DefenseWithoutGearDescription" class="text-danger"></span>
 </div>
 <div class="mb-3">
     <label asp-for="DefenseLoss" class="form-label"></label>
     <input asp-for="DefenseLoss" class="form-control">
-    <span asp-validation-for="DefenseLoss"></span>
+    <span asp-validation-for="DefenseLoss" class="text-danger"></span>
 </div>
 <div class="mb-3">
     <label asp-for="Probability" class="form-label"></label>
     <input asp-for="Probability" class="form-control">
-    <span asp-validation-for="Probability"></span>
+    <span asp-validation-for="Probability" class="text-danger"></span>
 </div>
