--- a/ActionCommandGame.Ui.Mvc/Views/PositiveGameEvents/CreateEditPartial.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/PositiveGameEvents/CreateEditPartial.cshtml
@@ -10,20 +10,20 @@
 <div class="mb-3">
     <label asp-for="Description" class="form-label"></label>
     <input asp-for="Description" class="form-control">
-    <span asp-validation-for="Description"></span>
+    <span asp-validation-for="Description" class="text-danger"></span>
 </div>
 <div class="mb-3">
     <label asp-for="Experience" class="form-label"></label>
     <input asp-for="Experience" class="form-control">
-    <span asp-validation-for="Experience"></span>
+    <span asp-validation-for="Experience" class="text-danger"></span>
 </div>
 <div class="mb-3">
     <label asp-for="Money" class="form-label"></label>
     <input asp-for="Money" class="form-control">
-    <span asp-validation-for="Money"></span>
+    <span asp-validation-for="Money" class="text-danger"></span>
 </div>
 <div class="mb-3">
     <label asp-for="Probability" class="form-label"></label>
     <input asp-for="Probability" class="form-control">
-    <span asp-validation-for="Probability"></span>
+    <span asp-validation-for="Probability" class="text-danger"></span>
 </div>
