--- a/ActionCommandGame.Ui.Mvc/Views/Item/Delete.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Item/Delete.cshtml
@@ -4,11 +4,19 @@
     ViewData["Title"] = $"Delete {Model.Name}";
 }
 
-<h1>@ViewData["Title"]</h1>
-
-<p>Are you sure you want to delete "@Model.Name"?</p>
-
-<form method="post">
-    <a asp-action="Index">No</a>
-    <button type="submit" class="btn btn-primary">Yes</button>
-</form>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-body text-center">
+                    <h5 class="card-title text-black">Confirm Deletion</h5>
+                    <p class="card-text text-black">Are you sure you want to delete "<strong>@Model.Name</strong>"?</p>
+                    <form method="post">
+                        <a asp-action="Index" class="btn btn-secondary me-2">No</a>
+                        <button type="submit" class="btn btn-danger">Yes</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
