--- a/ActionCommandGame.Ui.Mvc/Views/NegativeGameEvents/Edit.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/NegativeGameEvents/Edit.cshtml
@@ -4,11 +4,22 @@
     ViewData["Title"] = $"Edit {Model.Name}";
 }
 
-<h1>@ViewData["Title"]</h1>
-<form method="post">
-    <partial name="CreateEditPartial" model="Model" />
-    <button type="submit" class="btn btn-primary">Save</button>
-</form>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card shadow-lg">
+                <div class="card-body">
+                    <h3 class="text-center text-black">Edit @Model.Name</h3>
+                    <form method="post">
+                        <partial name="CreateEditPartial" model="Model" />
+                        <button type="submit" class="btn btn-primary w-100">Create</button>
+                    </form>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
 
 @section Scripts
 {
