--- a/ActionCommandGame.Ui.Mvc/Views/PositiveGameEvents/Create.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/PositiveGameEvents/Create.cshtml
@@ -4,16 +4,20 @@
     ViewData["Title"] = "New PositiveGameEvent";
 }
 
-<h1>New PositiveGameEvent</h1>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card shadow-lg">
+                <div class="card-body">
+                    <h3 class="text-center text-black">New PositiveGameEvent</h3>
+                    <form method="post">
+                        <partial name="CreateEditPartial" model="Model" />
+                        <button type="submit" class="btn btn-primary w-100">Create</button>
+                    </form>
+                </div>
+            </div>
 
-<h4>PositiveGameEvent</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <partial name="CreateEditPartial" model="Model"/>
-            <button type="submit" class="btn btn-primary">Create</button>
-        </form>
+        </div>
     </div>
 </div>
 
