--- a/ActionCommandGame.Ui.Mvc/Views/Game/_BuyPartial.cshtml
+++ b/ActionCommandGame.Ui.Mvc/Views/Game/_BuyPartial.cshtml
@@ -4,7 +4,7 @@
 {
     <!-- sucess-->
     <p>Bought @Model.Data.Item.Name</p>
-    <p>Current balance: @Model.Data.Player.Money</p>
+    <p>Current balance: &euro; @Model.Data.Player.Money</p>
 }
 else
 {
